source/assets/stylesheets/templates/_about.scss
.about {

  a {
    @extend .underlined;
  }

  ul {
    list-style: disc outside;
    margin-left: 20px;
  }

  &__background {
    position: fixed;
    z-index: 0;
    top: 50%;
    left: 50%;
    max-width: 800px;
    margin: 0 auto;
    transform: translate(-50%, -50%);
  }

  &__intro {
    position: relative;
    margin-bottom: 50px;
    padding: 20px 0 190px;
    position: relative;
    overflow: hidden;

    @include media($laptop) {
      padding: 50px 0 60px;
    }

    &__background {
      width: 100%;
      height: 100%;
      position: absolute;
      top: calc(100% - 170px);
      left: 0;
      background: image-url('about/hero.svg') repeat-x left top;
      background-size: contain;

      @include media($laptop) {
        width: 50%;
        top: 0;
        left: 50%;
      }
    }

    &__content {
      @include outer-container;
    }

    &__headline {
      @include span-columns(10);
      @include shift(1);
      @include omega;

      @include media($laptop) {
        @include span-columns(5);
        @include shift(0);
      }

      h2 {
        font-family: $ds-font-family-complementary;
        font-weight: 300;
        font-size: 1.11111rem;
        font-style: italic;
        color: $ds-color-green;
        margin: 0 0 15px 0;
        text-align: center;
        @include media($laptop) {
          text-align: left;
        }
      }

      h1 {
        margin: 0 0 20px 0;
        font-weight: 600;
        font-size: ds-rem-calc(18);
        text-align: center;

        @include media($tablet) { font-size: ds-rem-calc(28); }
        @include media($laptop) {
          text-align: left;
          font-size: ds-rem-calc(42);
          letter-spacing: ds-rem-calc(-1);
          line-height: 1.2;
        }
      }

      p {
        margin: 10px 0;
        font-size: ds-rem-calc(14);
        text-align: center;

        @include media($laptop) {
          text-align: left;
          font-size: ds-rem-calc(22);
        }

        @include media($tablet) { font-size: ds-rem-calc(20); }
        @include media($desktop) { font-size: ds-rem-calc(24); }
      }
    }
  }

  &__features {
    padding-bottom: 60px;

    &__row {
      @include outer-container;
      text-align: center;
      position: relative;
      z-index: 1;

      @include media($tablet) {
        text-align: left;
      }
    }

    .feature {
      @include span-columns(12);
      @include omega(2n);
      margin: 20px 0;

      @include media($tablet) {
        @include span-columns(6);
        @include omega(2n);
      }

      &__icon {
        @include span-columns(4);
        @include shift(4);
        @include omega();
        margin-bottom: 20px;

        @include media($tablet) {
          @include span-columns(2);
          @include shift(0);
          @include omega-reset(1n);

          img {
            width: 80%;
            max-width: 135px;
          }
        }
      }

      &__content {
        @include span-columns(8);
        @include shift(2);
        @include omega();

        @include media($tablet) {
          @include span-columns(8);
          @include shift(0);
          padding-top: 2  0px;
        }
      }

      h1 {
        font-size: ds-rem-calc(16);
        margin: 0;
        font-weight: 600;

        @include media($tablet) { font-size: ds-rem-calc(18); }
      }

      p {
        margin-top: 10px;
        font-size: ds-rem-calc(14);
        line-height: 1.6;

        @include media($tablet) {
          font-size: ds-rem-calc(16);
        }
      }

      &--careers {
        p {
          max-width: 360px;
          width: 90%;
          margin: 10px auto;
        }

        @include media($tablet) {
          @include span-columns(4);
          @include omega-reset(2n);
          @include omega(3n);

          p { margin: 10px 0; }
        }
      }
    }
  }

  &__section {
    @include outer-container;

    &__content {
      @include span-columns(12);

      @include media($tablet) {
        @include span-columns(6);
      }
    }
  }

  &__details {
    padding: 50px 0;
    color: white;
    background: $ds-color-charcoal;
    width: 100%;

    h1, h2, a { color: white; }
    a { border-color: rgba(white, 0.4); }
  }

  &__work {
    padding: 50px 0;
    width: 100%;

    h2 {
      text-align: center;
      margin-bottom: 50px;
    }

    .about__section {

      &__content {
        @include span-columns(10);
        @include shift(1);

        @include media($tablet) {
          @include span-columns(6);
          @include shift(3);
        }
      }
    }
  }

  &__job-opening {
    padding: 50px 0;
    background: white;
    width: 100%;

    h2 {
      text-align: center;
      margin-bottom: 50px;
    }

    .about__section {

      &__content {
        @include span-columns(10);
        @include shift(1);

        @include media($tablet) {
          @include span-columns(6);
          @include shift(3);
        }
      }
    }
  }
}

